--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+
+    <!-- font awesome -->
+
+    <script src="https://kit.fontawesome.com/80a499a0bf.js" crossorigin="anonymous"></script>
     <!-- font Link  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +61,7 @@
             <hr>
             <div class="top-blogs">
 
-                <h2 class="section-title"></h2>
+                <h2 class="section-title">Top blogs</h2>
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbnail">
@@ -71,11 +75,135 @@
                         </div>
 
                     </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet:list vs grids</h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="blog-author">By <a href=""> Danny Sapio</a></p>
+
+                        </div>
+
+                    </article>
                 </div>
 
 
             </div>
 
+        </section>
+
+        <!-- Latest Courses -->
+
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author"> Reed Crackoff</p>
+
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+
+                            <p>4.5</p>
+                            <div class="course-duration">
+                                <i class="far fa-clock">02:30 Hours</i>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title"> Master Powerpoint Cour RPowerpoint 2020 </h3>
+                        <p class="course-author"> Walter Scott</p>
+
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+
+                            <p>4.5</p>
+                            <div class="course-duration">
+                                <i class="far fa-clock">02:45 Hours</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author"> Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                            </div>
+                            <p>4.5</p>
+                            <div class="course-duration">
+                                <i class="far fa-clock">01:30 Hours</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
         </section>
     </main>
 
