--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
                             </div>
 
-                            <p>4.5</p>
+
                             <div class="course-duration">
                                 <i class="far fa-clock">02:30 Hours</i>
                             </div>
@@ -166,9 +167,10 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
                             </div>
 
-                            <p>4.5</p>
+
                             <div class="course-duration">
                                 <i class="far fa-clock">02:45 Hours</i>
                             </div>
@@ -191,8 +193,9 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
                             </div>
-                            <p>4.5</p>
+
                             <div class="course-duration">
                                 <i class="far fa-clock">01:30 Hours</i>
                             </div>
